--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
     <title>React App</title>
   </head>
   <body>
